# RLcade

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
bench/: __init__.py  __main__.py  env.py  trainer.py  utils.py
crates/nes/: Cargo.toml
crates/nes/src/: lib.rs  main.rs
crates/nes/src/core/: apu.rs  audio.rs  bus.rs  cartridge.rs  common.rs  cpu.rs  emulator.rs  joypad.rs  log.rs  mod.rs  nes.rs  palette.rs  ppu.rs  screen.rs
crates/nes/src/core/mappers/: cnrom.rs  mapper.rs  mod.rs  nrom.rs  sxrom.rs  txrom.rs  uxrom.rs
crates/rlcade/: Cargo.toml
crates/rlcade/src/: lib.rs  wasm.rs
crates/rlcade/src/envs/smb/: base.rs  mod.rs  wrappers.rs
crates/rlcade/src/py/: env.rs  mod.rs  nes.rs
examples/dqn/: dqn.sh  dqn_curriculum.sh  dqn_resnet.sh  rainbow_dqn.sh  rainbow_dqn_curriculum.sh
examples/ppo/: ppo.sh  ppo_lstm.sh  ppo_lstm_icm.sh  ppo_lstm_icm_curriculum.sh  ppo_resnet.sh
examples/sac/: sac.sh  sac_resnet.sh
rlcade/: __init__.py  nes.py
rlcade/agent/: __init__.py  __main__.py  base.py  dqn.py  ppo.py  sac.py
rlcade/args/: __init__.py  dqn.py  env.py  launcher.py  memory_profiler.py  model.py  nsys.py  off_policy.py  ppo.py  rainbow_dqn.py  sac.py  smb.py  training.py  viztracer.py
rlcade/checkpoint/: __init__.py  checkpoint.py  s3.py  safetensors.py
rlcade/entrypoint/: __init__.py
rlcade/envs/: __init__.py  register.py  smb.py
rlcade/graph/: __init__.py
rlcade/launcher/: __init__.py  elastic.py  mp.py  none.py  ray.py
rlcade/logger/: __init__.py
rlcade/modules/: __init__.py  actor.py  critic.py  encoders.py  heads.py  icm.py  lstm.py  qnet.py
rlcade/notebook/: __init__.py
rlcade/plugins/: __init__.py  _distributed.py  _metric_keys.py  async_checkpoint.py  checkpoint.py  curriculum.py  memory_profiler.py  mlflow.py  nsys.py  safetensors_export.py  tensorboard.py  viztracer.py  wandb.py
rlcade/training/: __init__.py  __main__.py  dqn_trainer.py  off_policy_trainer.py  on_policy_trainer.py  ppo_trainer.py  sac_trainer.py  trainer.py
rlcade/utils/: __init__.py  affinity.py  amp.py  metrics.py  pin_memory.py  progress.py  replay_buffer.py
tests/: conftest.py
tests/agent/: test_amp_grad_accum.py  test_async_checkpoint_compat.py  test_checkpoint_compat.py  test_compile.py  test_distributed_checkpoint.py  test_dqn.py  test_grad_accum_correctness.py  (+7 more)
tools/: hf.sh
(+24 files in other folders)
