[package]
name = "rlcade"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "nes"
crate-type = ["cdylib"]

[features]
default = ["python"]
python = ["pyo3", "numpy", "ndarray", "sdl2", "nes_core/sdl2-backend"]
wasm = ["wasm-bindgen"]

[dependencies]
nes_core = { path = "../nes", package = "nes", default-features = false }
pyo3 = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
sdl2 = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
